examples/test/testpolicy15368.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15368
  namespace: namespace168
spec:
  podSelector:
    matchLabels:
      key23: value24
      key49: value45
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key36: value41
          key15: value32
      podSelector:
        matchLabels:
          key21: value43
